--- a/Soundboard/Base.lproj/Main.storyboard
+++ b/Soundboard/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="mwW-8h-8EQ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,38 +9,78 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--About-->
+        <scene sceneID="inS-YK-7B7">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Soundboard" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="K1p-V9-IDz" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="95a-RD-qvL"/>
+                        <viewControllerLayoutGuide type="bottom" id="SwA-N6-p7X"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="I3H-BQ-zCk">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mHQ-H7-Lfu">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <state key="normal" title="Play"/>
-                                <connections>
-                                    <action selector="didTapPlayButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="SoA-Es-fwN"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstAttribute="trailing" secondItem="mHQ-H7-Lfu" secondAttribute="trailing" id="EfJ-qd-bKC"/>
-                            <constraint firstItem="mHQ-H7-Lfu" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="UP4-Gj-nsY"/>
-                            <constraint firstItem="mHQ-H7-Lfu" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="yZ9-1z-pfO"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="mHQ-H7-Lfu" secondAttribute="bottom" id="zPc-yy-1O0"/>
-                        </constraints>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="About" id="1xt-32-ZnY" userLabel="About"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ffd-0f-UD1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="136.80000000000001" y="127.28635682158921"/>
+            <point key="canvasLocation" x="216" y="1006"/>
+        </scene>
+        <!--Soundboard-->
+        <scene sceneID="PFW-ua-4OT">
+            <objects>
+                <tableViewController id="Z4l-BW-gPH" customClass="SoundboardViewController" customModule="Soundboard" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="9KB-Yp-R6J">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <connections>
+                            <outlet property="dataSource" destination="Z4l-BW-gPH" id="Nsy-IX-Y6d"/>
+                            <outlet property="delegate" destination="Z4l-BW-gPH" id="aXP-ru-XjQ"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Soundboard" id="sus-Xr-Of3"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GpQ-wp-JVE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1084" y="215"/>
+        </scene>
+        <!--Soundboard-->
+        <scene sceneID="J1Z-oL-gXd">
+            <objects>
+                <navigationController id="xYz-ps-gNh" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Soundboard" id="JFc-Zi-o1F"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="u4F-Xh-aSQ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="Z4l-BW-gPH" kind="relationship" relationship="rootViewController" id="W2x-dK-amA"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rqX-1d-S2E" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="216" y="215"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="zyu-GU-OeA">
+            <objects>
+                <tabBarController id="mwW-8h-8EQ" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="XNk-xU-yIF">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="xYz-ps-gNh" kind="relationship" relationship="viewControllers" id="msf-a9-axB"/>
+                        <segue destination="K1p-V9-IDz" kind="relationship" relationship="viewControllers" id="ug8-TY-yBt"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="p8K-cr-a1x" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-729" y="599"/>
         </scene>
     </scenes>
 </document>
