--- a/Soundboard/Base.lproj/Main.storyboard
+++ b/Soundboard/Base.lproj/Main.storyboard
@@ -36,6 +36,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <searchBar key="tableFooterView" contentMode="redraw" text="" id="meO-na-LeG">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </searchBar>
                         <connections>
                             <outlet property="dataSource" destination="Z4l-BW-gPH" id="Nsy-IX-Y6d"/>
                             <outlet property="delegate" destination="Z4l-BW-gPH" id="aXP-ru-XjQ"/>
