implemented delegate method to filter items
set search bar delegate

--- a/Soundboard/Base.lproj/Main.storyboard
+++ b/Soundboard/Base.lproj/Main.storyboard
@@ -36,11 +36,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <searchBar key="tableFooterView" contentMode="redraw" text="" id="meO-na-LeG">
+                        <searchBar key="tableHeaderView" contentMode="redraw" text="" id="meO-na-LeG">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="Z4l-BW-gPH" id="33m-jt-qbF"/>
+                            </connections>
                         </searchBar>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Z99-At-mWC">
+                                <rect key="frame" x="0.0" y="72" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Z99-At-mWC" id="bXD-hb-NaU">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
                         <connections>
                             <outlet property="dataSource" destination="Z4l-BW-gPH" id="Nsy-IX-Y6d"/>
                             <outlet property="delegate" destination="Z4l-BW-gPH" id="aXP-ru-XjQ"/>
