--- a/Soundboard/Base.lproj/Main.storyboard
+++ b/Soundboard/Base.lproj/Main.storyboard
@@ -39,7 +39,7 @@
                         <searchBar key="tableHeaderView" contentMode="redraw" text="" id="meO-na-LeG">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            <textInputTraits key="textInputTraits"/>
+                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="yes" spellCheckingType="yes"/>
                             <connections>
                                 <outlet property="delegate" destination="Z4l-BW-gPH" id="33m-jt-qbF"/>
                             </connections>
@@ -60,6 +60,9 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Soundboard" id="sus-Xr-Of3"/>
+                    <connections>
+                        <outlet property="searchBar" destination="meO-na-LeG" id="8Ys-VG-RUV"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GpQ-wp-JVE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
