--- a/Soundboard/ItemTableViewCell.xib
+++ b/Soundboard/ItemTableViewCell.xib
@@ -6,30 +6,29 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="125" id="KGk-i7-Jjw" customClass="ItemTableViewCell" customModule="Soundboard" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="125"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="130" id="KGk-i7-Jjw" customClass="ItemTableViewCell" customModule="Soundboard" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="130"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="124"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="129"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name of Sound" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pbe-I0-xI9">
-                        <rect key="frame" x="8" y="8" width="304" height="21"/>
+                        <rect key="frame" x="20" y="11" width="292" height="21"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="21" id="7lB-AN-12h"/>
+                            <constraint firstAttribute="height" constant="21" id="IDC-cL-dTn"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="21"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="keN-PA-moZ">
-                        <rect key="frame" x="8" y="34" width="304" height="83"/>
+                        <rect key="frame" x="20" y="37" width="292" height="84.5"/>
                         <string key="text">Description of sound. Lorem ipsum dolor sedset something something latin more latin I wish I knew latin, no way I'd bother learning it though, it's not useful enough to actually learn, no offense to anyone who learned latin.</string>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" red="0.28620871113989632" green="0.28620871113989632" blue="0.28620871113989632" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -37,20 +36,20 @@
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="pbe-I0-xI9" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="4ze-do-5q8"/>
-                    <constraint firstAttribute="bottom" secondItem="keN-PA-moZ" secondAttribute="bottom" constant="8" id="7k0-ei-yGY"/>
-                    <constraint firstItem="keN-PA-moZ" firstAttribute="top" secondItem="pbe-I0-xI9" secondAttribute="bottom" constant="5" id="MPO-LC-95p"/>
-                    <constraint firstItem="keN-PA-moZ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="WK1-ZK-TZY"/>
-                    <constraint firstItem="pbe-I0-xI9" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="YyF-hX-VKC"/>
-                    <constraint firstItem="pbe-I0-xI9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="hdO-m6-Uca"/>
-                    <constraint firstAttribute="trailing" secondItem="keN-PA-moZ" secondAttribute="trailing" constant="8" id="pbp-rY-4Ut"/>
+                    <constraint firstAttribute="trailing" secondItem="keN-PA-moZ" secondAttribute="trailing" constant="8" id="9J5-hM-Azs"/>
+                    <constraint firstAttribute="bottom" secondItem="keN-PA-moZ" secondAttribute="bottom" constant="8" id="MXX-he-Fmr"/>
+                    <constraint firstItem="keN-PA-moZ" firstAttribute="top" secondItem="pbe-I0-xI9" secondAttribute="bottom" constant="5" id="RIy-qn-Eli"/>
+                    <constraint firstItem="pbe-I0-xI9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="VeA-Sa-skj"/>
+                    <constraint firstAttribute="trailing" secondItem="pbe-I0-xI9" secondAttribute="trailing" constant="8" id="lg8-cD-PbU"/>
+                    <constraint firstItem="keN-PA-moZ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="oqM-Wj-1Qr"/>
+                    <constraint firstItem="pbe-I0-xI9" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="11" id="p6x-B5-Qd8"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="descriptionLabel" destination="keN-PA-moZ" id="3rv-Gb-lLC"/>
                 <outlet property="nameLabel" destination="pbe-I0-xI9" id="zwW-ZA-el5"/>
             </connections>
-            <point key="canvasLocation" x="34" y="112"/>
+            <point key="canvasLocation" x="34" y="114"/>
         </tableViewCell>
     </objects>
 </document>
