renamed SoundboardViewController SoundListViewController

--- a/Soundboard/Base.lproj/Main.storyboard
+++ b/Soundboard/Base.lproj/Main.storyboard
@@ -31,7 +31,7 @@
         <!--Soundboard-->
         <scene sceneID="PFW-ua-4OT">
             <objects>
-                <tableViewController id="Z4l-BW-gPH" customClass="SoundboardViewController" customModule="Soundboard" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="Z4l-BW-gPH" customClass="SoundListViewController" customModule="Soundboard" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="9KB-Yp-R6J">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -49,7 +49,7 @@
                                 <rect key="frame" x="0.0" y="72" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Z99-At-mWC" id="bXD-hb-NaU">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
