--- a/Soundboard/ItemTableViewCell.xib
+++ b/Soundboard/ItemTableViewCell.xib
@@ -16,7 +16,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="130"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="129.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="130"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name of Sound" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pbe-I0-xI9">
@@ -29,14 +29,14 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="keN-PA-moZ">
-                        <rect key="frame" x="20" y="37" width="211" height="85"/>
+                        <rect key="frame" x="20" y="37" width="211" height="84"/>
                         <string key="text">Description of sound. Lorem ipsum dolor sedset something something latin more latin I wish I knew latin, no way I'd bother learning it though, it's not useful enough to actually learn, no offense to anyone who learned latin.</string>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" red="0.28620871113989632" green="0.28620871113989632" blue="0.28620871113989632" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SJj-U7-jMJ">
-                        <rect key="frame" x="239" y="0.0" width="81" height="130"/>
+                        <rect key="frame" x="239" y="0.0" width="81" height="129"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NKM-dz-OtA">
                                 <rect key="frame" x="19" y="46" width="43" height="39"/>
@@ -45,6 +45,9 @@
                                     <constraint firstAttribute="height" constant="39" id="yJg-cs-aj9"/>
                                 </constraints>
                                 <state key="normal" title="Button" image="heart_unfilled"/>
+                                <connections>
+                                    <action selector="didTapFavoriteButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Wfc-s7-CdS"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
