--- a/Soundboard/Base.lproj/Main.storyboard
+++ b/Soundboard/Base.lproj/Main.storyboard
@@ -26,7 +26,7 @@
             </objects>
             <point key="canvasLocation" x="215" y="599"/>
         </scene>
-        <!--Soundboard-->
+        <!--Soundboard for TYT-->
         <scene sceneID="KI1-cI-aPJ">
             <objects>
                 <collectionViewController id="hvw-yq-0OK" customClass="SoundboardViewController" customModule="Soundboard" customModuleProvider="target" sceneMemberID="viewController">
@@ -46,7 +46,7 @@
                             <outlet property="delegate" destination="hvw-yq-0OK" id="WzF-FQ-V97"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" title="Soundboard" id="2cC-zZ-Syh"/>
+                    <navigationItem key="navigationItem" title="Soundboard for TYT" id="2cC-zZ-Syh"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9yr-Lp-Atw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
