--- a/Soundboard/Base.lproj/Main.storyboard
+++ b/Soundboard/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="mwW-8h-8EQ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="mwW-8h-8EQ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -15,7 +15,7 @@
                 <navigationController id="fDq-Q6-wwr" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Soundboard" image="grid" selectedImage="grid" id="dmj-ME-Abg"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="aGS-fD-7c5">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -26,7 +26,7 @@
             </objects>
             <point key="canvasLocation" x="215" y="599"/>
         </scene>
-        <!--Soundboard for TYT-->
+        <!--Soundboard-->
         <scene sceneID="KI1-cI-aPJ">
             <objects>
                 <collectionViewController id="hvw-yq-0OK" customClass="SoundboardViewController" customModule="Soundboard" customModuleProvider="target" sceneMemberID="viewController">
@@ -46,7 +46,7 @@
                             <outlet property="delegate" destination="hvw-yq-0OK" id="WzF-FQ-V97"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" title="Soundboard for TYT" id="2cC-zZ-Syh"/>
+                    <navigationItem key="navigationItem" title="Soundboard" id="2cC-zZ-Syh"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9yr-Lp-Atw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -106,7 +106,7 @@
                                 <rect key="frame" x="0.0" y="72" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Z99-At-mWC" id="bXD-hb-NaU">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -131,7 +131,7 @@
                 <navigationController id="xYz-ps-gNh" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="All Sounds" image="list" selectedImage="list" id="JFc-Zi-o1F" userLabel="All Sounds"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="u4F-Xh-aSQ">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
